feat: Implement volume and VCP indicators with comprehensive testing
- Added volume indicator calculations in core/analysis/indicators/volume.py, including moving averages, RSI, Bollinger Bands, and KDJ.
- Introduced VCP indicator calculations in core/analysis/indicators/vcp.py.
- Developed a unified strategy signal framework in docs/analysis-signal-strategy-unification-plan.md, detailing the integration of indicators, signals, and strategies.
- Redesigned Plotly HTML report generation in docs/plotly-html-report-redesign-plan.md for improved readability and performance.
- Documented the strategy backtesting process in docs/策略回测流程说明.md, outlining the flow and key components.
- Created CSS styles for result viewer in frontend/static/style_result_viewer.css to enhance UI.
- Added unit tests for volume and VCP indicators, ensuring consistency and correctness in test/test_analysis_volume_indicators.py and test/test_analysis_vcp.py.
- Implemented indicator discovery tests in test/test_indicator_discovery.py to verify automatic registration of indicators.
- Conducted strategy chain tests in test/test_strategy_chain.py to validate the end-to-end flow from indicators to strategy execution.

--- a/docs/项目功能说明.md
+++ b/docs/项目功能说明.md
@@ -54,7 +54,8 @@ stock-quant/
 
 - 回测引擎：`core/quant/quant_manage.py`
 - 策略体系：`core/strategy/trading/`（继承 `StrategyBase`）
-- 指标体系：`core/strategy/indicator/`（继承 `bt.Indicator`）
+- 信号指标：`core/strategy/indicator/`（继承 `bt.Indicator`，只做信号规则判断）
+- 指标计算：`core/analysis/indicators/`（统一计算指标数值，供信号层消费）
 
 ## 5. 分析与扩展模块
 
@@ -63,6 +64,7 @@ stock-quant/
 - 期权定价：`core/analysis/options_pricing.py`
 - 预测指标/模型：`core/analysis/forecast_metrics.py`, `forecast_models.py`
 - 技术指标扩展：`core/analysis/technical_indicators_ext.py`
+- 统一指标计算：`core/analysis/indicators/`
 - K 线形态检测：`core/analysis/candlestick_patterns.py`
 
 ## 6. VCP 相关能力
