feat: Enhance project documentation and add VCPStrategyLoose for backtesting validation
- Updated project functionality documentation to reflect current structure and features, emphasizing the four-layer architecture and strategy characteristics.
- Introduced VCPStrategyLoose, a relaxed version of the VCP strategy for backtesting signal validation, allowing for lower trigger thresholds.
- Added a detailed plan for integrating Neon database for signal storage and backtest report visualization, including tasks for API integration and signal recording enhancements.

--- a/docs/策略回测流程说明.md
+++ b/docs/策略回测流程说明.md
@@ -1,158 +1,556 @@
-﻿# 策略回测流程说明（EnhancedVolumeStrategy）
+﻿# 策略回测流程说明
 
 **命令入口**
 ```
 python -m core.cli backtest --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv --strategy EnhancedVolumeStrategy
 ```
 
-## 1. 总体流程图（Mermaid）
+## 1. 整体架构：指标 → 信号 → 策略 → 交易
+
+### 分层职责
 
 ```mermaid
 flowchart TD
-    A[CLI 命令] --> B[core/cli.py: cmd_backtest]
-    B --> C[StrategyManager 获取策略类]
-    B --> D[core/quant/quant_manage.py: run_backtest_enhanced_volume_strategy]
-    D --> E[读取 CSV -> DataFrame]
-    D --> F[构建 Backtrader DataFeed]
-    D --> G[cerebro.addstrategy(EnhancedVolumeStrategy)]
-    G --> H[cerebro.run()]
-    H --> I[EnhancedVolumeStrategy.next]
-    I --> J[EnhancedVolumeIndicator.next 产生信号]
-    I --> K[trading_strategy_buy/sell]
-    H --> L[notify_order / notify_trade]
-    H --> M[统计回测结果]
-    H --> N[信号记录导出 + Plotly HTML]
+    A["📊 L1: 指标层 (core/analysis)"]
+    B["🎯 L2: 信号层 (core/strategy/indicator)"]
+    C["📈 L3: 策略层 (core/strategy/trading)"]
+    D["💰 L4: 交易执行 (StrategyBase.trading_strategy_buy/sell)"]
+    
+    A --> |"RSI/BOLL/KDJ/成交量等<br/>计算结果"|B
+    B --> |"主信号/增强信号<br/>buy_signal/sell_signal"|C
+    C --> |"信号触发条件判断<br/>执行策略.next()"|D
+    D --> |"下单/成交记录"|E["📝 交易记录"]
+    B --> |"记录信号触发条件<br/>指标快照"|F["📋 信号日志"]
+    
+    style A fill:#e1f5ff
+    style B fill:#f3e5f5
+    style C fill:#e8f5e9
+    style D fill:#fff3e0
+    style E fill:#fce4ec
+    style F fill:#f1f8e9
 ```
 
-## 2. 关键伪代码（核心路径）
+**关键原则**：
+- **指标层只计算**：不产生信号，输出数值与统计量
+- **信号层只判断**：消费指标输出，根据规则生成买/卖信号
+- **策略层只消费**：检查信号是否存在，调用买卖方法
+- **交易层只执行**：处理资金、仓位、手续费、下单等
 
-### 2.1 CLI 入口
-```
-cmd_backtest(args):
-  csv_path = args.csv
-  strategy_class = StrategyManager().get_strategy(args.strategy)
-  run_backtest_enhanced_volume_strategy(csv_path, strategy_class)
-```
+---
 
-### 2.2 回测执行
-```
-run_backtest_enhanced_volume_strategy(csv_path, strategy_class):
-  df = read_csv(csv_path)
-  data_feed = create_backtrader_feed(df)
-  cerebro.adddata(data_feed)
-  cerebro.addstrategy(strategy_class)
-  results = cerebro.run()
-  strategy = results[0]
-  export_signal_records_if_any(strategy.indicator)
-  plotly_draw(csv_path, strategy, init_cash, html_path)
-```
+## 2. 回测流程全景
 
-### 2.3 策略逻辑（消费信号）
-```
-EnhancedVolumeStrategy.next():
-  if order exists: return
-  if indicator.enhanced_buy_signal:
-      trading_strategy_buy()
-      buy_signals_count += 1
-  elif indicator.enhanced_sell_signal:
-      trading_strategy_sell()
-      sell_signals_count += 1
-```
-
-### 2.4 信号生成（Indicator）
-```
-EnhancedVolumeIndicator.next():
-  计算成交量/均线偏离 + RSI + 布林带 + KDJ
-  main_buy/main_sell = 基础信号
-  enhanced_buy/enhanced_sell = 过滤后信号
-  if enhanced_buy: lines.enhanced_buy_signal = price
-  if enhanced_sell: lines.enhanced_sell_signal = price
-  同步写入 SignalRecordManager
+```mermaid
+flowchart TD
+    A[CLI: backtest] --> B[StrategyManager.get_strategy]
+    B --> C[run_backtest_enhanced_volume_strategy]
+    C --> D["读取CSV<br/>(股票数据)"]
+    D --> E["创建DataFeed<br/>(Backtrader)"]
+    E --> F["cerebro.addstrategy<br/>(策略类)"]
+    F --> G["cerebro.run()<br/>(逐K循环)"]
+    
+    G --> H["每根K线执行<br/>Strategy.next()"]
+    H --> H1["指标计算<br/>Indicator.next()"]
+    H1 --> H2["调用分析层函数<br/>compute_volume_features()"]
+    H2 --> H3["生成信号线<br/>main_/enhanced_"]
+    H3 --> H4["记录信号<br/>SignalRecordManager"]
+    
+    H1 --> I["策略判断<br/>if signal[0] is not NaN"]
+    I --> J["触发买卖方法<br/>trading_strategy_buy/sell"]
+    J --> K["下单<br/>self.order = self.buy/sell()"]
+    
+    K --> L["notify_order()"]
+    L --> M["notify_trade()"]
+    
+    G --> N["统计指标<br/>(收益/回撤等)"]
+    N --> O["导出信号CSV"]
+    O --> P["Plotly绘图<br/>+ HTML报告"]
+    
+    style H1 fill:#e1f5ff
+    style H3 fill:#f3e5f5
+    style H4 fill:#f1f8e9
+    style I fill:#e8f5e9
+    style J fill:#fff3e0
 ```
 
-## 3. 关键代码节点（文件与职责）
+## 3. 关键代码节点映射
 
-- CLI 入口：`core/cli.py`
-  - `cmd_backtest()` 负责解析参数并调用回测入口
+### 指标层（L1）：`core/analysis/indicators/`
 
-- 回测执行：`core/quant/quant_manage.py`
-  - `run_backtest_enhanced_volume_strategy()` 读取 CSV、运行回测、输出报告
+位置：`core/analysis/indicators/volume.py` / `vcp.py`
 
-- 策略实现：`core/strategy/trading/volume/enhanced_volume.py`
-  - `EnhancedVolumeStrategy.next()` 读取信号并触发买卖
+职责：**向量化计算**指标数值，不含任何交易逻辑。
 
-- 信号生成：`core/strategy/indicator/volume/enhanced_volume.py`
-  - `EnhancedVolumeIndicator.next()` 生成增强信号
+示例（成交量指标）：
+```python
+def compute_latest_volume_features(df, params):
+    """计算当前K线的成交量特征值"""
+    # 返回：{
+    #   'vol_ma_5': 5日成交量均值,
+    #   'vol_ma_20': 20日成交量均值,
+    #   'close_ma_5': 5日收盘价均值,
+    #   'rsi': RSI值,
+    #   'boll_upper': 布林带上轨,
+    #   'kdj_k': KDJ-K值,
+    #   ...
+    # }
+```
 
-- 指标计算：`core/analysis/indicators/volume.py`
-  - 统一计算量能/RSI/BOLL/KDJ等基础指标供信号层规则判断
+---
 
-- 信号记录：`core/strategy/indicator/common.py`
-  - `SignalRecordManager.add_signal_record()`
+### 信号层（L2）：`core/strategy/indicator/`
 
-- 交易记录与统计：`core/strategy/trading/common.py`
-  - `StrategyBase.notify_order()` / `notify_trade()`
+位置：`core/strategy/indicator/volume/enhanced_volume.py` / `single_volume.py`  
+      `core/strategy/indicator/pattern/vcp_indicator.py`
 
-- 可视化输出：`core/visualization/visual_tools_plotly.py`
-  - `plotly_draw()` 生成 HTML 报告
+职责：**消费指标输出**，根据规则产生**买卖信号线**。
 
-## 4. EnhancedVolumeStrategy 信号触发原理（补充说明）
+核心流程（EnhancedVolumeIndicator.next()）：
+```python
+def next(self):
+    # 1. 调用分析层计算指标
+    vol_features = compute_latest_volume_features(df, params)
+    
+    # 2. 规则判断 - 主信号
+    if vol_features['vol_ma_5'] > vol_features['vol_ma_20'] * 1.5:
+        # 成交量放大，且均线满足方向判断 → 主买入信号
+        self.lines.main_buy_signal[0] = self.data.close[0]
+        self.signal_record_manager.add_signal_record(...)
+    
+    # 3. 规则判断 - 增强信号
+    if (main_buy_signal and  
+        vol_features['rsi'] < 30 and  # RSI超卖
+        price < boll_lower and  # 价格在布林带下方
+        kdj_k < 20):  # KDJ极端低位
+        # 多重验证通过 → 增强买入信号
+        self.lines.enhanced_buy_signal[0] = self.data.close[0]
+```
 
-### 4.1 信号层级
-- 主信号：成交量放大 + 均线方向 + 连续阴/阳线形态
-- 增强信号：主信号 + RSI + 布林带 + KDJ 多重过滤
+输出信号线：
+- `main_buy_signal` / `main_sell_signal`：基础信号
+- `enhanced_buy_signal` / `enhanced_sell_signal`：过滤后信号
+- `vcp_signal` / `vcp_sell_signal`：形态信号
 
-### 4.2 主信号的原理
-- 成交量放大：短期成交量均线显著高于中/长期均量（带波动修正阈值）
-- 均线方向：在连续 3 天阴/阳线背景下，短均线相对当前价格形成方向性判断
-- 组合逻辑：买/卖计数在 5 日与 20 日两个周期同时满足才触发主信号
+---
 
-### 4.3 增强信号的原理
-- RSI：超卖/超买区间或穿越
-- 布林带：触及下轨(买)或上轨(卖)并确认
-- KDJ：K/D/J 同时处于极端区间
-- 增强信号 = 主信号 + RSI + 布林带 + KDJ 同时满足
+### 策略层（L3）：`core/strategy/trading/`
 
-### 4.4 简单案例（买入信号示例）
+位置：`core/strategy/trading/volume/enhanced_volume.py` / `single_volume.py`  
+      `core/strategy/trading/pattern/vcp_strategy.py`
 
-**场景描述**：某股票在一段下跌后出现缩量企稳，短期均量开始抬升。连续 3 天阴线后，价格在布林带下轨附近止跌，RSI 低位回升，KDJ 同步进入低位区间。
+职责：**消费信号**，判断买卖条件，调用交易方法。
 
-**满足条件**（概念级示例）：
-- 近 5 日成交量均线显著高于 20 日均线 → 量能放大
-- 连续 3 天阴线，但短均线高于当前收盘价 → 主信号买入方向成立
-- RSI < 30 或刚上穿 30 → 超卖回升
-- 价格触及布林带下轨，并收盘回到下轨上方 → 反弹确认
-- KDJ 低位（K/D/J < 20）→ 动能低位
+核心流程（EnhancedVolumeStrategy.next()）：
+```python
+def next(self):
+    if self.order:  # 有未成交订单时等待
+        return
+    
+    # 检查增强信号
+    if not np.isnan(self.indicator.lines.enhanced_buy_signal[0]):
+        logger.info(f'*** 增强买入信号 {self.data.close[0]} ***')
+        self.trading_strategy_buy()  # 调用买入方法
+        self.buy_signals_count += 1
+    elif not np.isnan(self.indicator.lines.enhanced_sell_signal[0]):
+        logger.info(f'*** 增强卖出信号 {self.data.close[0]} ***')
+        self.trading_strategy_sell()  # 调用卖出方法
+        self.sell_signals_count += 1
+```
 
-**结果**：
-- 主信号成立
-- 增强信号成立 → EnhancedVolumeStrategy 执行买入
+---
 
-> 说明：这是逻辑示例，用于理解信号触发条件；实际触发取决于具体数据序列。
+### 交易层（L4）：`core/strategy/trading/common.py`
 
-## 5. SingleVolumeStrategy 与 EnhancedVolumeStrategy 的差异（回测层面）
+位置：StrategyBase 类的 `trading_strategy_buy()` / `trading_strategy_sell()`
 
-### 5.1 信号来源差异
-- **SingleVolumeStrategy**：只使用主信号 `main_buy_signal` / `main_sell_signal`
-- **EnhancedVolumeStrategy**：只使用增强信号 `enhanced_buy_signal` / `enhanced_sell_signal`
-  - 主信号在策略层被注释，不参与交易
+职责：**执行交易**，处理资金管理、仓位限制、手续费、下单。
 
-对应代码：
-- Single：`core/strategy/trading/volume/single_volume_.py`
-- Enhanced：`core/strategy/trading/volume/enhanced_volume.py`
+核心流程：
+```python
+def trading_strategy_buy(self):
+    # 1. 计算可用资金
+    total_asset = self.broker.getvalue()  # 总资产
+    available_cash = self.broker.getcash()  # 可用现金
+    usable_cash = min(available_cash, 
+                     total_asset * self.max_single_buy_percent,  # 单笔限额
+                     total_asset * self.max_portfolio_percent)   # 投资组合限额
+    
+    # 2. 计算买入数量
+    price = self.data.close[0]
+    buy_size = (usable_cash // price) // self.min_order_size * self.min_order_size
+    
+    # 3. 下单
+    if buy_size >= self.min_order_size:
+        self.order = self.buy(size=buy_size, price=price)
+        logger.info(f"【买入挂单】 股数={buy_size} 价格={price:.2f}")
+```
 
-### 5.2 信号触发强度差异
-- Single 的主信号只要求成交量 + 均线方向 + 连续阴/阳线形态
-- Enhanced 的增强信号在主信号基础上，再加 RSI / 布林带 / KDJ 多重过滤
+Backtrader 自动调用 `notify_order()` 和 `notify_trade()` 更新持仓。
 
-**结果**：
-- Single 交易次数更高、信号更密集
-- Enhanced 交易次数更低、信号更保守
+---
 
-### 5.3 回测执行逻辑是否有区别
-**没有差别**。两者的回测执行流程完全一致：
-- 相同的资金/仓位管理
-- 相同的下单逻辑与手续费计算
-- 相同的 Backtrader 回测调用链
+## 4. 四大策略的买卖原理与使用场景
 
-差异只来自 **信号触发条件**（Indicator 输出的信号线不同）。
+### (1) EnhancedVolumeStrategy（增强量化）
+
+**特点**：多指标综合过滤，信号较保守
+
+**买入原理**：
+```
+成交量突破 + 价格突破 + RSI低位 + 布林带低位 + KDJ同向
+```
+- 成交量：短期均量 > 长期均量 × 1.5（成交量放大）
+- 价格：短均线 > 收盘价（短期上升趋势）
+- RSI：< 30 或刚穿越 30（超卖反弹）
+- 布林带：价格接近下轨（极端压低）
+- KDJ：K/D/J 都 < 20（同步低位）
+
+**卖出原理**：
+```
+成交量萎缩 + 价格突破 + RSI高位 + 布林带高位 + KDJ同向
+```
+- 反向触发上述条件
+
+**使用场景**：
+- ✅ 波动性强、量能充足的品种（A股、美股高流动性）
+- ✅ 日线及以上周期
+- ✅ 风险偏低的投资者（信号少，但精准度较高）
+- ❌ 低流动性品种（信号太稀疏）
+
+**参数调优建议**：
+- `boll_width`：增大 → 信号更保守；减小 → 信号更频繁
+- RSI 极值阈值：可调 30 改为 25/35
+- 成交量倍数：默认 1.5，可改为 1.3（更灵敏）或 1.8（更严格）
+
+---
+
+### (2) SingleVolumeStrategy（简单量化）
+
+**特点**：仅使用主信号（成交量+均线），信号更频繁
+
+**买入原理**：
+```
+成交量突破 + 价格方向确认 + 连续阴/阳线形态
+```
+- 成交量：短期均量 > 长期均量 × 阈值
+- 均线方向：判断短/中/长期趋势
+- 形态：连续 N 天同向K线（确认趋势）
+
+**卖出原理**：
+```
+反向条件触发
+```
+
+**使用场景**：
+- ✅ 快速交易、频繁调仓的策略
+- ✅ 中期趋势跟踪（周线/日线）
+- ✅ 量化对冲组合
+- ❌ 高滑点/高手续费品种（交易次数多）
+
+**vs EnhancedVolumeStrategy**：
+- 交易次数：Single **2-3 倍**高于 Enhanced
+- 信号精准：Enhanced **高于** Single（多重过滤）
+
+---
+
+### (3) VCPStrategy（波动收缩形态）
+
+**特点**：形态识别，强趋势捕捉
+
+**买入原理**：
+```
+Stage 2 + VCP 形态识别 + 进度评分
+```
+
+1. **Stage 2 趋势模板**（必须满足）：
+   - 价格 > MA50 > MA150 > MA200（强上升趋势）
+   - 收盘 > 开盘（多头确认）
+
+2. **VCP 波动收缩**（识别底部结构）：
+   - 高点递减，低点递增 → 形成"收缩"
+   - 成交量逐次递减 → 量能枯竭
+   - 连续 2-4 次收缩 → 积能阶段
+
+3. **进度评分**（0-1，默认阈值 1.0）：
+   - 形态完整度得分
+   - 时间周期达成度
+   - 满足 100% 才出信号
+
+**卖出原理**：
+```
+EMA(5) 穿越检测 + 反向突破
+```
+- 价格从 EMA(5) 上方跌破下方 → 卖出信号
+
+**使用场景**：
+- ✅ 长周期强趋势捕捉（1-3 个月）
+- ✅ 单边行情（涨/跌明确）
+- ✅ 低频交易策略（信号稀疏但高胜率）
+- ❌ 震荡盘（信号极少）
+- ❌ 需要频繁调仓（出信号间隔长）
+
+**参数调优建议**：
+- `progress_threshold`：0.34（VCPStrategyLoose 用于验证）→ 1.0（严格）
+- `min_contractions` / `max_contractions`：调整识别次数范围
+- `ema_sell_period`：默认 5，可改为 20 以延迟卖出
+
+---
+
+### (4) VCPStrategyLoose（VCP 宽松版，验证用）
+
+**特点**：VCP 形态框架，降低触发门槛
+
+**改动**：
+- `progress_threshold = 0.34`（vs 严格版 1.0）
+- 进度评分只需达 34% 即出信号
+
+**使用场景**：
+- 🔧 回测管线验证（确保流程通畅）
+- 🔧 形态识别调试（参数敏感性测试）
+- ❌ 实盘交易（信号过多，胜率下降）
+
+---
+
+## 5. 四大策略的对标与选择建议
+
+| 指标 | Enhanced | Single | VCP | VCP Loose |
+|------|----------|--------|-----|-----------|
+| **信号频率** | 低（保守过滤） | 中（基础规则） | 极低（形态稀有） | 中（验证用） |
+| **交易胜率** | 高 | 中 | 很高 | 低（验证用） |
+| **年交易次数** | 20-50 | 50-150 | 5-20 | 100+ |
+| **适用周期** | 日/周 | 日 | 周/月 | 日 |
+| **适用品种** | 流动性好 | 流动性中 | 波动强 | 全品种 |
+| **技术难度** | 中等 | 简单 | 复杂 | - |
+| **参数敏感性** | 中 | 高 | 低 | 中 |
+
+**选择逻辑**：
+- 快速验证回测管线 → **VCPStrategyLoose**
+- 稳定高胜率交易 → **EnhancedVolumeStrategy**
+- 频繁短期跟踪 → **SingleVolumeStrategy**
+- 长期强趋势捕捉 → **VCPStrategy**
+
+---
+
+## 6. 指标计算中的向量化与信号记录
+
+### 6.1 向量化计算示例（Enhanced）
+
+**错误**（循环，禁止）：
+```python
+for i in range(len(df)):
+    df.at[i, 'rsi'] = compute_rsi(df.iloc[:i])  # ❌ 逐行计算，极其缓慢
+```
+
+**正确**（向量化）：
+```python
+# 利用 Backtrader 内置 RSI 或 pandas rolling
+rsi = bt.indicators.RSI(self.data.close, period=14)  # Backtrader 向量化
+# 或：
+df['rsi'] = df['close'].rolling(14).apply(lambda x: talib.RSI(x, 14)[-1], raw=True)
+```
+
+### 6.2 信号记录机制
+
+每条信号触发时记录到 `SignalRecordManager`：
+
+```python
+self.signal_record_manager.add_signal_record(
+    date=self.data.datetime.date(),
+    signal_type='enhanced_buy',  # 标准化类型
+    signal_description=f'成交量: {vol_ma_5:.0f}手 > {vol_ma_20:.0f}手, RSI: {rsi:.1f}, 价格: {price:.2f}'
+)
+```
+
+导出为 CSV 与 Neon 数据库（便于复盘与数据分析）。
+
+---
+
+## 7. HTML 报告中的信号展示
+
+### 7.1 信号样式配置
+
+位置：`core/visualization/visual_tools_plotly.py` → `SIGNAL_STYLE_CONFIG`
+
+通过统一配置支持多种信号类型可视化：
+
+```python
+SIGNAL_STYLE_CONFIG = [
+    {
+        "signal_type": "enhanced_buy",      # 信号类型标识
+        "name": "增强买入信号",              # 图例名称
+        "text": "增",                       # 图上显示文字
+        "symbol": "circle",                # 标记形状
+        "color": "#2f6b4f",                # 标记颜色
+        "text_color": "#2f6b4f",           # 文字颜色
+        "y_offset": 0.95,                  # 相对K线低点的位置
+    },
+    # ... 其他信号类型
+    {
+        "signal_type": "vcp_buy",
+        "name": "VCP 买入信号",
+        "text": "VCP",
+        "symbol": "diamond",
+        "color": "#f59e0b",
+        "y_offset": 0.93,
+    },
+]
+```
+
+### 7.2 信号类型标准化
+
+函数：`core/strategy/indicator/common.py` → `normalize_signal_type()`
+
+```python
+def normalize_signal_type(signal_type: str) -> str:
+    """
+    将来自不同指标的信号类型转换为标准名称
+    例如：'enhanced_buy' → 统一显示配置
+    """
+    return signal_type  # 当前返回原值，可扩展转换逻辑
+```
+
+### 7.3 HTML 报告渲染流程
+
+1. **提取信号数据**：从策略指标的 `SignalRecordManager` 获取信号记录
+2. **过滤有效日期**：确保信号日期在 CSV 数据范围内
+3. **按配置渲染**：遍历 `SIGNAL_STYLE_CONFIG`，为每种信号类型添加 Plotly 标记点
+4. **生成悬浮信息**：hover 时显示信号触发条件与指标值（后续 Neon 扩展）
+
+示例（Plotly scatter 标记）：
+```python
+fig.add_trace(
+    go.Scatter(
+        x=signal_dates,
+        y=signal_prices,
+        mode='markers+text',
+        name='增强买入信号',
+        marker=dict(symbol='circle', color='#2f6b4f', size=10),
+        text=['增' for _ in range(len(signal_dates))],
+        hovertemplate='日期: %{x}<br>信号: %{customdata[0]}<extra></extra>',
+        customdata=signal_descriptions,
+    )
+)
+```
+
+---
+
+## 8. 运行示例与验证
+
+### 8.1 执行回测
+
+```bash
+# Enhanced 策略
+python -m core.cli backtest \
+  --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv \
+  --strategy EnhancedVolumeStrategy
+
+# VCP 策略
+python -m core.cli backtest \
+  --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv \
+  --strategy VCPStrategy
+
+# VCP 宽松版（验证用）
+python -m core.cli backtest \
+  --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv \
+  --strategy VCPStrategyLoose
+```
+
+### 8.2 输出文件
+
+回测完成后，生成以下文件：
+
+```
+html/
+├── US.AAPL_20251124_backtest_report.html    # 回测结果报告
+└── ...
+
+signals/
+└── data/
+    └── US.AAPL_20251124_enhanced_volume_signals.csv  # 信号详情 CSV
+```
+
+### 8.3 预期结果
+
+打开 HTML 文件，观察：
+- ✅ K线图表显示
+- ✅ 信号点标记（绿色圆/红色圆/橙色菱形等）
+- ✅ 悬停信号点显示触发条件描述
+- ✅ KPI 卡片展示收益率/回撤/交易次数
+
+---
+
+## 9. 扩展：Neon 信号数据库落库
+
+未来计划（见 `docs/neon-signal-backtest-html-plan.md`）：
+
+每次产生信号时，除了记录 CSV 外，还会同步写入 Neon 数据库，存储：
+- 信号触发时的指标快照（RSI/BOLL/成交量等数值）
+- 触发条件描述（便于复盘"为什么出这个信号"）
+- 回测元信息（run_id / 策略名 / 股票代码等）
+
+HTML 报告可通过后端 API 查询 Neon，在悬浮面板展示完整指标值。
+
+---
+
+## 10. 开发指南：新增策略
+
+### 10.1 三层框架
+
+创建新策略时，需要按分层实现：
+
+```
+1️⃣ 指标层（可选，如已有分析函数则复用）
+   core/analysis/indicators/my_indicator.py
+   ├─ 向量化计算函数
+   └─ 输出结构化指标值（DataFrame / dict）
+
+2️⃣ 信号层（必须）
+   core/strategy/indicator/{category}/my_indicator.py
+   ├─ class MyIndicator(bt.Indicator)
+   ├─ 消费指标值，根据规则生成买卖信号线
+   └─ 记录信号到 SignalRecordManager
+
+3️⃣ 策略层（必须）
+   core/strategy/trading/{category}/my_strategy.py
+   ├─ class MyStrategy(StrategyBase)
+   ├─ 检查信号是否存在
+   └─ 调用 trading_strategy_buy/sell()
+
+4️⃣ 交易层（自动）
+   StrategyBase 提供
+   ├─ trading_strategy_buy/sell() 实现
+   └─ notify_order/trade() 更新持仓
+```
+
+### 10.2 关键要点
+
+- **严禁在信号层重复计算指标**：应调用 `core/analysis` 函数
+- **严禁在策略层添加买卖逻辑**：只做 `if signal exists` 的判断
+- **记录每条信号**：便于回测复盘与数据分析
+- **继承 StrategyBase**：获得统一的资金管理与记录接口
+
+### 10.3 自动发现机制
+
+新增策略会自动被 `StrategyManager` 发现：
+
+```bash
+python -m core.cli strategy list
+# 输出：EnhancedVolumeStrategy, SingleVolumeStrategy, VCPStrategy, ...
+```
+
+（无需手动注册，基于 walk_packages 自动扫描）
+
+---
+
+## 总结
+
+本文档说明了从 **指标层 → 信号层 → 策略层 → 交易层** 的清晰分层架构：
+
+| 层级 | 职责 | 关键文件 | 核心方法 |
+|------|------|---------|---------|
+| **L1 指标** | 向量化计算 | `core/analysis/indicators/` | `compute_*_features()` |
+| **L2 信号** | 规则判断，产生信号 | `core/strategy/indicator/` | `Indicator.next()` |
+| **L3 策略** | 消费信号，执行买卖 | `core/strategy/trading/` | `Strategy.next()` |
+| **L4 交易** | 资金/仓位管理，下单 | `core/strategy/trading/common.py` | `trading_strategy_buy/sell()` |
+
+四大策略（Enhanced、Single、VCP、VCPLoose）各有特色，根据交易目标与品种特性选择即可。
