--- a/docs/项目功能说明.md
+++ b/docs/项目功能说明.md
@@ -1,7 +1,14 @@
-﻿# 项目功能说明（现状整理）
+﻿# 项目功能说明
 
 **更新时间**：2026-01-31  
-**说明**：本文件基于当前代码与历史文档整理，描述项目现有结构与可用功能。
+**架构版本**：2.0（指标-信号-策略-交易四层分离）  
+**说明**：本文件基于当前代码与git改动整理，描述项目现有结构与可用功能，重点突出清晰的分层架构与四大策略特性。
+
+## Scratchpad（当前进度）
+
+- [x] 任务描述：同步git改动到文档，表现分层架构与四大策略
+- [x] 计划步骤：1) 更新回测与策略部分 2) 新增四大策略详解 3) 补充Neon与Flask扩展 4) 版本更新
+- [x] 进度更新：已完成分层架构重写、四策略详解、Neon/Flask计划描述
 
 ## 1. 项目结构概览
 
@@ -50,12 +57,49 @@ stock-quant/
 - CSV 标准字段：
   `date, open, high, low, close, volume, amount, stock_code, stock_name, market`
 
-## 4. 回测与策略
+## 4. 回测与策略：四层分离架构
+
+### 4.1 分层设计核心
+
+采用清晰的四层分离架构，确保代码高度复用与易于维护：
+
+**L1 指标层** (`core/analysis/indicators/`) 
+- 向量化计算指标数值（RSI/BOLL/KDJ/成交量等）
+- 无交易逻辑，仅输出数值与统计量
+- 文件：volume.py / vcp.py
+
+**L2 信号层** (`core/strategy/indicator/`)
+- 消费指标输出，根据规则生成买/卖信号线
+- 继承 `bt.Indicator`，只做规则判断
+- 输出：buy_signal / sell_signal 信号线
+- 记录：SignalRecordManager（含指标快照与触发条件）
+- 文件：*_indicator.py（enhanced_volume.py / vcp_indicator.py）
+
+**L3 策略层** (`core/strategy/trading/`)
+- 检查信号是否存在，调用买卖方法
+- 继承 StrategyBase，消费信号并执行 `next()`
+- 逻辑：if signal[0] is not NaN → trading_strategy_*
+- 文件：*_strategy.py（enhanced_volume.py / vcp_strategy.py）
+
+**L4 交易层** (`core/strategy/trading/common.py`)
+- 处理资金/仓位管理、手续费、下单
+- 由 StrategyBase 提供统一实现
+- 方法：trading_strategy_buy() / trading_strategy_sell()
+- 自动调用：notify_order() / notify_trade()
+
+**核心原则**：
+- ❌ 禁止在信号层重复计算指标（应调用 L1 函数）
+- ❌ 禁止在策略层混入买卖逻辑（只做信号检查）
+- ✅ 每条信号都要记录（便于复盘与数据分析）
+- ✅ 继承 StrategyBase（获得统一的资金管理）
+
+### 4.2 回测引擎
 
 - 回测引擎：`core/quant/quant_manage.py`
-- 策略体系：`core/strategy/trading/`（继承 `StrategyBase`）
-- 信号指标：`core/strategy/indicator/`（继承 `bt.Indicator`，只做信号规则判断）
-- 指标计算：`core/analysis/indicators/`（统一计算指标数值，供信号层消费）
+- 数据源：CSV 本地文件（mock-only，无外部网络依赖）
+- 逐 K 循环：Backtrader 自动调用 Strategy.next()
+- 成交记录：notify_order() / notify_trade() 自动记录
+- 输出：信号 CSV + Plotly HTML 报告
 
 ## 5. 分析与扩展模块
 
@@ -79,7 +123,259 @@ stock-quant/
 - StockQuant 迁移：实时行情（Sina/网易）、Tushare 基础数据、TA‑Lib 指标封装
 - Stock_Analysis_For_Quant 迁移：绩效/风险指标、组合分析、期权、预测、K线形态等
 
-## 8. 测试
+## 8. 四大策略详解
+
+### 8.1 EnhancedVolumeStrategy（增强量化）
+
+**特点**：多指标综合过滤，信号保守但精准
+
+**买入条件**（ALL 同时满足）：
+- 成交量：vol_ma_5 > vol_ma_20 × 1.5（量能放大）
+- 均线：短期均线 > 当前收盘价（向上趋势）
+- RSI：< 30（超卖）或刚穿越 30（反弹确认）
+- 布林带：价格 < 下轨（极端压低）
+- KDJ：K/D/J 都 < 20（同步低位）
+
+**卖出条件**：反向触发上述条件
+
+**使用场景**：
+- ✅ 波动性强、流动性好的品种（A股、美股）
+- ✅ 日线及以上周期
+- ✅ 风险偏低投资者（信号精准度高）
+- ❌ 低流动性品种（信号极稀疏）
+
+**参数调优建议**：
+- `boll_width`：增大 → 更保守；减小 → 更频繁
+- RSI 极值：默认 30，可改为 25/35
+- 成交量倍数：默认 1.5，可改为 1.3（灵敏）或 1.8（严格）
+
+**统计特性**：信号频率 20-50次/年 | 交易胜率 高 | 年交易次数 较低
+
+---
+
+### 8.2 SingleVolumeStrategy（简单量化）
+
+**特点**：仅成交量+均线，信号频繁
+
+**买入条件**（主信号）：
+- 成交量：vol_ma_5 > vol_ma_20 × 阈值（量能放大）
+- 均线方向：短/中/长期趋势确认
+- 形态：连续 N 天同向 K 线（趋势确认）
+
+**卖出条件**：反向条件触发
+
+**使用场景**：
+- ✅ 快速交易、频繁调仓的量化策略
+- ✅ 中期趋势跟踪（周线/日线）
+- ✅ 对冲组合
+- ❌ 高滑点/高手续费品种（交易次数多）
+
+**vs EnhancedVolumeStrategy**：
+- 交易次数：Single **2-3 倍**高于 Enhanced
+- 信号精准：Enhanced **高于** Single（多重过滤）
+- 适配场景：Single 快速跟踪 vs Enhanced 精准捕捉
+
+**统计特性**：信号频率 50-150次/年 | 交易胜率 中 | 年交易次数 较高
+
+---
+
+### 8.3 VCPStrategy（波动收缩形态）
+
+**特点**：形态识别 + 趋势捕捉，强单边行情利器
+
+**买入原理**（三阶段检查）：
+
+1. **Stage 2 趋势模板**（必须满足）：
+   - 价格 > MA50 > MA150 > MA200（强上升趋势）
+   - 收盘 > 开盘（多头确认）
+
+2. **VCP 波动收缩**（底部积能结构）：
+   - 高点递减，低点递增 → 形成"收缩"结构
+   - 成交量逐次递减 → 量能枯竭
+   - 连续 2-4 次收缩 → 蓄势阶段
+
+3. **进度评分**（0-1 范围，触发阈值 100%）：
+   - 形态完整度得分
+   - 时间周期达成度
+   - 满足 100% 时才触发信号
+
+**卖出条件**：
+- EMA(5) 穿越检测
+- 价格从 EMA(5) 上方跌破下方 → 卖出信号
+
+**使用场景**：
+- ✅ 长周期强趋势捕捉（1-3 个月）
+- ✅ 单边行情（涨/跌明确）
+- ✅ 低频交易策略（信号稀疏但高胜率）
+- ❌ 震荡盘（信号极少）
+- ❌ 短期调仓（出信号间隔长）
+
+**参数调优建议**：
+- `progress_threshold`：0.34 → 0.5 → 1.0（严格度递增）
+- `min_contractions` / `max_contractions`：2-4 次收缩范围可调
+- `ema_sell_period`：默认 5，可改为 20（延迟卖出）
+
+**统计特性**：信号频率 5-20次/年 | 交易胜率 很高 | 年交易次数 极低
+
+---
+
+### 8.4 VCPStrategyLoose（VCP 宽松版，验证用）
+
+**特点**：VCP 形态框架，降低进度阈值用于快速验证
+
+**改动点**：
+- `progress_threshold = 0.34`（vs 严格版 1.0）
+- 进度评分只需达 34% 即可触发信号
+
+**使用场景**：
+- 🔧 回测管线验证（确保流程通畅）
+- 🔧 形态参数调试（敏感性测试）
+- 🔧 信号频率测试
+- ❌ **不推荐**实盘交易（信号过多，胜率下降）
+
+**统计特性**：信号频率 100+次/年 | 交易胜率 低 | 年交易次数 极高
+
+---
+
+### 8.5 策略对标对比表
+
+| 维度 | Enhanced | Single | VCP | VCP Loose |
+|------|----------|--------|-----|----------|
+| **信号频率** | 低 | 中 | 极低 | 中 |
+| **交易胜率** | 高 | 中 | 很高 | 低 |
+| **年交易次数** | 20-50 | 50-150 | 5-20 | 100+ |
+| **适用周期** | 日/周 | 日 | 周/月 | 日 |
+| **适用品种** | 流动性好 | 流动性中 | 波动强 | 全品种 |
+| **技术复杂度** | 中等 | 简单 | 复杂 | 中等 |
+| **参数敏感性** | 中 | 高 | 低 | 中 |
+| **推荐用途** | 稳定收益 | 频繁跟踪 | 趋势捕捉 | 流程验证 |
+
+**选择建议**：
+- 快速验证回测管线 → **VCPStrategyLoose**
+- 追求稳定高胜率 → **EnhancedVolumeStrategy**
+- 频繁短期跟踪 → **SingleVolumeStrategy**
+- 捕捉长期强趋势 → **VCPStrategy**
+
+---
+
+## 9. 可视化与报告系统
+
+### 9.1 HTML 回测报告
+
+**生成工具**：`core/visualization/visual_tools_plotly.py`
+
+**报告内容**：
+- K 线图表（OHLC 走势）
+- 信号标记点（买卖点可视化）
+- KPI 卡片（收益率/回撤/交易次数）
+- 交易详情表（每笔交易记录）
+
+**信号显示机制**：
+- 统一配置：`SIGNAL_STYLE_CONFIG`（支持多种信号类型）
+- 标记形状：圆形（量化买卖）、菱形（VCP 买）、三角（VCP 卖）
+- 颜色区分：绿色（买入）、红色（卖出）、橙色（形态信号）
+- 悬浮提示：hover 显示信号触发条件与指标数值
+
+### 9.2 信号记录与标准化
+
+**记录器**：`core/strategy/indicator/common.py` → `SignalRecordManager`
+
+**记录字段**：
+- `date`：信号触发日期
+- `signal_type`：信号类型（enhanced_buy/vcp_buy 等）
+- `signal_description`：触发条件说明文本
+- `indicator_values`（扩展）：指标快照 JSON
+- `trigger_conditions`（扩展）：触发条件列表
+
+**信号类型标准化**：
+- 函数：`core/strategy/indicator/common.py` → `normalize_signal_type()`
+- 用途：统一不同指标的信号类型命名，便于 HTML 渲染配置查询
+
+**导出方式**：
+- CSV：每次回测自动生成（`signals/data/*.csv`）
+- Neon DB：后续扩展（可选启用）
+
+---
+
+## 10. 扩展计划与未来方向
+
+### 10.1 Neon 信号数据库落库（规划中）
+
+**文档**：`docs/neon-signal-backtest-html-plan.md`
+
+**核心目标**：
+- 每次回测时，自动将信号与指标快照写入 Neon 数据库
+- 保存完整的指标数值、触发条件、回测元信息（run_id、策略名、股票代码）
+- HTML 报告通过后端 API 查询 Neon，在悬浮面板展示详情
+- 便于复盘：\"为什么出这个信号？\" → 查看当时的 RSI/BOLL/成交量值
+
+**关键模块**（待实现）：
+- `core/db/neon_client.py`：Neon API 访问与批量写入封装
+- `settings.py`：Neon API 配置与启用开关
+- `core/visualization/visual_tools_plotly.py`：HTML 注入 run_id 与后端查询
+- `frontend/frontend_app.py`：新增 `/api/signals` 查询接口
+
+**配置示例**：
+```bash
+export NEON_ENABLED=true
+export NEON_API_URL=\"https://api.neon.tech/sql\"
+export NEON_API_KEY=\"<your-api-key>\"
+```
+
+**使用场景**：
+- 交易复盘：深层分析信号触发时的市场状态
+- 参数优化：跨回测对比，找出最优参数组合
+- 性能监控：实时追踪策略表现与信号质量
+
+### 10.2 Flask 后端 API 扩展（规划中）
+
+**位置**：`frontend/frontend_app.py`
+
+**新增接口**：
+
+1. **查询信号详情**
+   ```
+   GET /api/signals?run_id=<id>&date_range=<start,end>&signal_type=<type>
+   返回：signal_type / date / price / indicator_values / description
+   ```
+
+2. **列出历史回测**
+   ```
+   GET /api/backtest/list?strategy=<name>&limit=20
+   返回：run_id / strategy / stock / start_date / end_date / return / max_drawdown
+   ```
+
+3. **查询单次回测详情**
+   ```
+   GET /api/backtest/<run_id>
+   返回：完整回测元数据与性能指标
+   ```
+
+**前端集成**：
+- HTML 报告加载时自动获取对应回测的信号详情
+- 信号点 hover 时展示完整指标数据与触发原因
+- 侧边栏可选显示信号列表与详情筛选器
+- 支持按信号类型、日期范围过滤
+
+**数据流**：
+```
+回测执行 → 信号 CSV + Neon 数据库
+             ↓
+        HTML 生成（注入 run_id）
+             ↓
+     用户打开 HTML（前端）
+             ↓
+     调用 /api/signals（后端）
+             ↓
+     查询 Neon 并返回
+             ↓
+     前端渲染到悬浮面板
+```
+
+---
+
+## 11. 测试
 
 - pytest 统一测试（mock_only）
 - 示例命令：`python -m pytest -m mock_only`
+- 包含：指标层单测、信号层规则测试、策略全链路测试
