feat: Implement VCPPlus strategy and associated indicator
- Introduced VCPPlus strategy with enhanced signal generation logic.
- Created VCPPlusIndicator for calculating VCPPlus conditions and signals.
- Updated settings to include parameters specific to VCPPlus strategy.
- Refactored existing VCP logic to separate concerns between data processing and signal generation.
- Added documentation for VCPPlus strategy and its implementation details.
- Implemented tests for VCPPlus strategy registration and backtesting.

--- a/docs/项目功能说明.md
+++ b/docs/项目功能说明.md
@@ -2,12 +2,12 @@
 
 **更新时间**：2026-01-31  
 **架构版本**：2.0（指标-信号-策略-交易四层分离）  
-**说明**：本文件基于当前代码与git改动整理，描述项目现有结构与可用功能，重点突出清晰的分层架构与四大策略特性。
+**说明**：本文件基于当前代码与git改动整理，描述项目现有结构与可用功能，重点突出清晰的分层架构与五大策略特性。
 
 ## Scratchpad（当前进度）
 
-- [x] 任务描述：同步git改动到文档，表现分层架构与四大策略
-- [x] 计划步骤：1) 更新回测与策略部分 2) 新增四大策略详解 3) 补充Neon与Flask扩展 4) 版本更新
+- [x] 任务描述：同步git改动到文档，表现分层架构与五大策略
+- [x] 计划步骤：1) 更新回测与策略部分 2) 新增五大策略详解 3) 补充Neon与Flask扩展 4) 版本更新
 - [x] 进度更新：已完成分层架构重写、四策略详解、Neon/Flask计划描述
 
 ## 1. 项目结构概览
@@ -40,6 +40,8 @@ stock-quant/
   - 示例：`python -m core.cli strategy list`
 - VCP 策略回测：`python -m core.cli backtest --csv ... --strategy VCPStrategy`
   - 示例：`python -m core.cli backtest --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv --strategy VCPStrategy`
+- VCPPlus 策略回测：`python -m core.cli backtest --csv ... --strategy VCPPlusStrategy`
+  - 示例：`python -m core.cli backtest --csv data/stock/akshare/US.AAPL_AAPL_20211126_20251124.csv --strategy VCPPlusStrategy`
 - 交易策略分析（统一入口）：`python -m core.cli strategy analyze --input ...`（输出 CSV + HTML）
   - 示例：`python -m core.cli strategy analyze --input x/option_trades_all.csv`
 
@@ -56,6 +58,8 @@ stock-quant/
 - 缺失成交量统一填 0 并记录提示日志
 - CSV 标准字段：
   `date, open, high, low, close, volume, amount, stock_code, stock_name, market`
+- VCPPlus 预留字段：
+  `benchmark_close, rs_rating`
 
 ## 4. 回测与策略：四层分离架构
 
@@ -123,7 +127,7 @@ stock-quant/
 - StockQuant 迁移：实时行情（Sina/网易）、Tushare 基础数据、TA‑Lib 指标封装
 - Stock_Analysis_For_Quant 迁移：绩效/风险指标、组合分析、期权、预测、K线形态等
 
-## 8. 四大策略详解
+## 8. 五大策略详解
 
 ### 8.1 EnhancedVolumeStrategy（增强量化）
 
@@ -219,7 +223,35 @@ stock-quant/
 
 ---
 
-### 8.4 VCPStrategyLoose（VCP 宽松版，验证用）
+### 8.4 VCPPlusStrategy（VCP 强化版）
+
+**特点**：完整 VCP 筛选逻辑落地，保留 Finviz 条件与 RS 评级过滤
+
+**买入原理**（原样保留）：
+- Stage 2 趋势模板（MA50/150/200 多头排列 + 52周区间）
+- VCP 收缩结构（2-4 次收缩、收缩幅度递减）
+- 成交量枯竭（5日均量 < 30日均量）
+- 未突破盘整（仍处于收缩区间）
+- RS 评级 ≥ 70（后续由 CSV 预留字段提供）
+
+**卖出条件**：
+- EMA(5) 跌破触发
+
+**使用场景**：
+- ✅ 需要严格 VCP 形态 + RS 过滤的选股回测
+- ✅ 与 Finviz 条件结合的观察池筛选
+- ❌ 缺少基准/RS 数据时（需在 CSV 中补全）
+
+**参数调优建议**：
+- `local_extrema_order`：局部极值灵敏度（默认 10）
+- `min_rs_rating`：RS 门槛（默认 70）
+- `lookback_period`：VCP 观察窗口（默认 520）
+
+**统计特性**：信号频率 极低 | 交易胜率 高 | 年交易次数 极低
+
+---
+
+### 8.5 VCPStrategyLoose（VCP 宽松版，验证用）
 
 **特点**：VCP 形态框架，降低进度阈值用于快速验证
 
@@ -237,24 +269,25 @@ stock-quant/
 
 ---
 
-### 8.5 策略对标对比表
+### 8.6 策略对标对比表
 
-| 维度 | Enhanced | Single | VCP | VCP Loose |
-|------|----------|--------|-----|----------|
-| **信号频率** | 低 | 中 | 极低 | 中 |
-| **交易胜率** | 高 | 中 | 很高 | 低 |
-| **年交易次数** | 20-50 | 50-150 | 5-20 | 100+ |
-| **适用周期** | 日/周 | 日 | 周/月 | 日 |
-| **适用品种** | 流动性好 | 流动性中 | 波动强 | 全品种 |
-| **技术复杂度** | 中等 | 简单 | 复杂 | 中等 |
-| **参数敏感性** | 中 | 高 | 低 | 中 |
-| **推荐用途** | 稳定收益 | 频繁跟踪 | 趋势捕捉 | 流程验证 |
+| 维度 | Enhanced | Single | VCP | VCPPlus | VCP Loose |
+|------|----------|--------|-----|---------|----------|
+| **信号频率** | 低 | 中 | 极低 | 极低 | 中 |
+| **交易胜率** | 高 | 中 | 很高 | 很高 | 低 |
+| **年交易次数** | 20-50 | 50-150 | 5-20 | 5-15 | 100+ |
+| **适用周期** | 日/周 | 日 | 周/月 | 周/月 | 日 |
+| **适用品种** | 流动性好 | 流动性中 | 波动强 | 强趋势 + RS | 全品种 |
+| **技术复杂度** | 中等 | 简单 | 复杂 | 更复杂 | 中等 |
+| **参数敏感性** | 中 | 高 | 低 | 低 | 中 |
+| **推荐用途** | 稳定收益 | 频繁跟踪 | 趋势捕捉 | 严格选股 | 流程验证 |
 
 **选择建议**：
 - 快速验证回测管线 → **VCPStrategyLoose**
 - 追求稳定高胜率 → **EnhancedVolumeStrategy**
 - 频繁短期跟踪 → **SingleVolumeStrategy**
 - 捕捉长期强趋势 → **VCPStrategy**
+- 严格 VCP + RS 过滤 → **VCPPlusStrategy**
 
 ---
 
@@ -282,7 +315,7 @@ stock-quant/
 
 **记录字段**：
 - `date`：信号触发日期
-- `signal_type`：信号类型（enhanced_buy/vcp_buy 等）
+- `signal_type`：信号类型（enhanced_buy/vcp_buy/vcp_plus_buy 等）
 - `signal_description`：触发条件说明文本
 - `indicator_values`（扩展）：指标快照 JSON
 - `trigger_conditions`（扩展）：触发条件列表
